# RustEngine3D

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build_gnu.bat  build_msvc.bat  run.bat  run.sh  run_android.sh  run_gnu.bat  run_msvc.bat
base_project/: Cargo.toml  build.rs
base_project/src/: application_constants.rs  constants.rs  lib.rs  main.rs
engine_resources/effects/: default.effect
engine_resources/material_instances/: color_blue.matinst  color_green.matinst  color_red.matinst  default.matinst  mutant.matinst  skeletal.matinst  sphere.matinst  suzan.matinst
engine_resources/models/: axis_gizmo.model  cube.model  mutant.model  quad.model  sphere.model  suzan.model
engine_resources/scenes/: example.scene
engine_resources/sound_banks/: default.bank
examples/: example.rs
miscellaneous/asset_manager/: asset_descriptor.py  asset_manager.blend  asset_manager.py  export_assets.blend  export_game_data.py  import_assets.blend  import_game_data.py
miscellaneous/rust_engine_3d_asset_manager/: __init__.py  animation_layer.py  asset_descriptor.py  config.ini  copy_custom_properties.py  export_game_data.py  import_game_data.py  utilities.py
miscellaneous/rust_engine_3d_exporter/: animation_blend_mask.py  create_collision.py  export_assets.blend  export_game_data.py  export_game_scene.py  export_mesh.py  exporter.blend  import_assets.blend  import_game_data.py
resource/material_instances/: clear_color.matinst  clear_depth.matinst  clear_framebuffer.matinst  clear_gbuffer.matinst  clear_render_target.matinst  composite_gbuffer.matinst  copy_cube_map.matinst  default.matinst  downsampling.matinst  generate_min_z.matinst  precomputed_atmosphere.matinst  render_bloom.matinst  render_color_r16g16b16a16.matinst  render_color_r32.matinst  render_copy.matinst  render_fft_ocean.matinst  render_font.matinst  render_motion_blur.matinst  render_skeletal_shadow.matinst  render_ssao.matinst  render_ssao_blur.matinst  render_ssr_resolve.matinst  render_static_shadow.matinst  render_taa.matinst  render_ui.matinst  render_ui_test.matinst  skeletal.matinst
resource/materials/: clear_color.mat  clear_depth.mat  clear_framebuffer.mat  clear_gbuffer.mat  clear_render_target.mat  composite_gbuffer.mat  copy_cube_map.mat  generate_min_z.mat  precomputed_atmosphere.mat  render_bloom.mat  render_color.mat  render_color_r16g16b16a16.mat  render_color_r32.mat  render_debug.mat  render_fft_ocean.mat  render_final.mat  render_font.mat  render_motion_blur.mat  render_skeletal_object.mat  render_ssao.mat  render_static_object.mat  render_ui.mat
resource/meshes/: axis_gizmo.mesh  sphere.mesh  suzan.mesh
resource/models/: quad.model  skeletal.model
resource/shaders/: PCFKernels.glsl  clear_color.frag  clear_depth.frag  clear_gbuffer.frag  composite_gbuffer.frag  default.frag  default.vert  downsampling.comp  generate_min_z.comp  render_bloom_highlight.frag  render_debug.frag  render_final.frag  render_font.frag  render_font.vert  render_font_common.glsl  render_gaussian_blur.frag  render_motion_blur.frag  render_object.frag  render_object.vert  render_object_common.glsl  render_quad.frag  render_quad.vert  render_ssao.frag  render_ssr.frag  render_ssr_resolve.frag  render_taa.frag  render_ui.frag  render_ui.vert  (+6 more)
src/: constants.rs  lib.rs  main.rs
(+575 files in other folders)
