[package]
name = "rust_engine_3d"
version = "0.1.0"
authors = ["ubuntunux <ubuntunux@gmail.com>"]
license = "BSD 2-Clause"
homepage = "https://github.com/ubuntunux/RustEngine3D"
repository = "https://github.com/ubuntunux/RustEngine3D"
readme = "README.md"
edition = "2021"

[dependencies]
ash = { version = "0.38", default-features = false, features = ["linked", "debug", "std"] }
ash-window = "0.13"
bincode = "1.3"
bitflags = "2.5"
byteorder = "1.5"
cgmath = "0.18"
chrono = "0.4"
env_logger = "0.11"
gltf = { version = "1.4", features = ["extras", "names", "import"] }
image = "0.25"
log = "0.4"
nalgebra = {version = "0.33.1", features = ["serde-serialize"]}
nalgebra-glm = "0.19.0"
time = "0.3"
rand = "0.8"
regex = "1.10"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sdl2 = { version = "0.37.0", features = ["mixer"] }
winit = { version = "0.29", features = ["rwh_06"] }
which = "6.0"
xml-rs = "0.8"

[lib]
crate-type = ["lib", "cdylib"]

[[example]]
name = "example"
path = "examples/example.rs"