[package]
name = "rust_engine_3d"
version = "0.1.0"
authors = ["ubuntunux <ubuntunux@gmail.com>"]
license = "BSD 2-Clause"
homepage = "https://github.com/ubuntunux/RustEngine3D"
repository = "https://github.com/ubuntunux/RustEngine3D"
readme = "README.md"
edition = "2021"

[dependencies]
ash = { version = "0.38", default-features = false, features = ["linked", "debug", "std"] }
ash-window = "0.13"
bincode = "1.3"
bitflags = "2.9"
byteorder = "1.5"
cgmath = "0.18"
chrono = "0.4"
env_logger = "0.11"
gltf = { version = "1.4", features = ["extras", "names", "import"] }
image = "0.25"
log = "0.4"
nalgebra = {version = "0.33", features = ["serde-serialize"]}
nalgebra-glm = "0.19"
rand = "0.9"
regex = "1.11"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sdl2 = { version = "0.38", features = ["mixer"] }
strum = "0.27"
strum_macros = "0.27"
time = "0.3"
winit = { version = "0.29", features = ["rwh_06"] }
which = "6.0"
xml-rs = "0.8"

[lib]
crate-type = ["lib", "cdylib"]

[[example]]
name = "example"
path = "examples/example.rs"