[package]
name = "rust_engine_3d"
version = "0.1.0"
authors = ["ubuntunux <ubuntunux@gmail.com>"]
license = "BSD 2-Clause"
homepage = "https://github.com/ubuntunux/RustEngine3D"
repository = "https://github.com/ubuntunux/RustEngine3D"
readme = "README.md"
edition = "2021"

[dependencies]
ash = { version = "0.38", default-features = false, features = ["linked", "debug", "std"] }
ash-window = "0.13"
bincode = "1.3.3"
bitflags = "2.10"
byteorder = "1.5"
chrono = "0.4"
env_logger = "0.11"
gltf = { version = "1.4", features = ["extras", "names", "import"] }
image = "0.25"
log = "0.4"
nalgebra = {version = "0.34", features = ["serde-serialize"]}
nalgebra-glm = "0.20"
rand = "0.9"
regex = "1.12"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sdl2 = { version = "0.38", features = ["mixer"] }
strum = "0.27"
strum_macros = "0.27"
winit = { version = "0.29.15", features = ["rwh_06"] }
which = "8.0"
xml-rs = "1.0"

[lib]
crate-type = ["lib", "cdylib"]

[[example]]
name = "example"
path = "examples/example.rs"